2011-02-16  Andreas Kupries  <andreask@activestate.com>

	* include/format/options_tclparam_oo.inc: Documented option -package, and
	* include/format/options_tclparam_snit.inc: the new cross -class/-package
	* pkgIndex.tcl: resolution. Implemented resolution of missing -package
	* pt_pgen.tcl: and -class through each other. Bumped version to 1.0.1.
	* pt_pgen.man:

2011-01-25  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* include/example/expr_ptgenb.inc: Fixed a typo in the example,
	* include/example/full_app.inc: and dropped continuation lines
	  to prevent missformatting in the formatted docs.

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2011-01-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* pt_peg_to_json.test: Dropped the local json::write package,
	* pkgIndex.tcl: replaced with use of the common json::write
	* json_write.tcl: derived from it.

2010-11-25  Andreas Kupries  <andreask@activestate.com>

	* pt_cparam_config_critcl.man: Added pragmas for meta-data
	* pt_cparam_config_critcl.tcl: scanning to prevent the
	  requirements of the embedded code template to be taken as the
	  requirements of the package itself. Bumped version to 1.0.1.

2010-10-07  Andreas Kupries  <andreask@activestate.com>

	* pt_tclparam_config_snit.man: Added pragmas for meta-data
	* pt_tclparam_config_snit.tcl: scanning to prevent the
	* pt_tclparam_config_tcloo.man: requirements of the embedded code
	* pt_tclparam_config_tcloo.tcl: template to be taken as the
	* pkgIndex.tcl: requirements of this package. Bumped versions to
	1.0.1.

2010-07-27  Andreas Kupries  <andreask@activestate.com>

	* pt_peg_interp.test: New files. Additional testsuites.
	* pt_runtime.test: Demonstrate the problem with X* and X?
	* tests/pt_peg_interp.tests: alone in a symbol, for modes
	* tests/pt_runtime.tests: leaf and value.

	* pt_peg_interp.tcl: Fixed two typos in comments.